same MAVEN_OPTS as current integration tests